--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ template = "index.html"
 [back]
 listenhost = "0.0.0.0"
 listenport = 8000
-domains = [ "ns.bypass.com" ]
+domains = [ "dns.1433.eu.org","dns.bypass.eu.org"]
 cname = "www.baidu.com"
 [basicauth]
 check = false
